--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: vector
   author: Artem Grod
   description:  install vector on host
   company: your company (optional)
@@ -31,8 +32,8 @@ galaxy_info:
   platforms:
     - name: Centos
       versions:
-      - 7
-      - 8
+        - 7
+        - 8
   # - name: SomePlatform
   #   versions:
   #   - all
