--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,8 @@ galaxy_info:
   role_name: vector
   author: Artem Grod
   description:  install vector on host
-  company: your company (optional)
+  company: Art
+  namespace: art
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -18,8 +19,7 @@ galaxy_info:
   license: MIT
     
 
-  min_ansible_version: 2.1
-
+  min_ansible_version: all
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
 
@@ -30,7 +30,7 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
   platforms:
-    - name: Centos
+    - name: CentOS
       versions:
         - 7
         - 8
